# ara_sdk

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  create_symlink.bat  install_dependencies_linux.sh  setup.xml
Examples/: CMakeLists.txt
Examples/ARCore_Test/: CMakeLists.txt  UIApp.cpp  UIApp.h
Examples/UISDK_Dev/: CMakeLists.txt
Examples/UISDK_Dev/NativeWindowTest/: CMakeLists.txt  main.cpp
Examples/UISDK_Dev/ResComp/: CMakeLists.txt  main.cpp
Examples/UISDK_Dev/UITest/: CMakeLists.txt  UITestApp.cpp  UITestApp.h
Examples/UITest/: CMakeLists.txt  UITestApp.cpp  UITestApp.h  main.cpp
Examples/VisualStudioExample/: UI_Example.sln
Libraries/: CMakeLists.txt
Libraries/GLBase/: CMakeLists.txt
Libraries/SceneGraph/: CMakeLists.txt
Libraries/UI/: CMakeLists.txt
Libraries/Utilities/: CMakeLists.txt
tav_app/: .cproject  .project  CMakeLists.txt  debugTav.sh  startTav.sh
tav_app/scripts/: genSceneNodeFactH.sh  genSceneNodeFactH.sh~  manGenSceneNodeFactH.sh  split
tav_app/src/: SceneNodeBlender.cpp  SceneNodeBlender.h  countof.h  main.cpp  main.h  tav_modules.h
tav_audio/: .cproject  .project  CMakeLists.txt
tav_audio/src/: AubioAnalyzer.cpp  AubioAnalyzer.h  FFT.cpp  FFT.h  MultiChanFFT.cpp  MultiChanFFT.h  PAudio.cpp  PAudio.h  PaPhaseLockLoop.cpp  PaPhaseLockLoop.h  SoundFilePlayer.cpp  SoundFilePlayer.h
tav_core/: .cproject  .project  CMakeLists.txt
tav_core/Documentation/: GLSLParticleSystemFbo.rtf  GUI.rtf  OSC Communication.rtf  SceneNode organisation.rtf  Sequencer  Tav_Mapping_Organisation.rtf  pino_Mapping_Organisation.rtf
tav_core/src/: AnimVal.h  CameraFact.h  Envelope.h  FPSTimer.h  IOHIDEventData.h  IOHIDEventTypes.h  Median.h  SceneNode.cpp  SceneNode.h  ShaderProtoFact.h  Timer.cpp  Timer.h  UDPServer.cpp  UDPServer.h  math_utils.cpp  math_utils.h  pch.h  string_utils.cpp  string_utils.h
tav_sn_audio/: .cproject  .project  CMakeLists.txt
tav_sn_audio/src/: SNAudioCompPart.cpp  SNAudioCompPart.h  SNAudioEnvirBlend.cpp  SNAudioEnvirBlend.h  SNAudioFluid.cpp  SNAudioFluid.h  SNAudioFotoPerl3D.cpp  SNAudioFotoPerl3D.h  SNAudioOptics.cpp  SNAudioOptics.h  SNAudioPlane.cpp  SNAudioPlane.h  SNAudioRing.cpp  SNAudioRing.h  SNAudioTunnel.cpp  SNAudioTunnel.h  SNAudioTunnelGPU.cpp  SNAudioTunnelGPU.h  SNAudioTunnelGPU_Perl.cpp  SNAudioTunnelGPU_Perl.h  SNAudioWave.cpp  SNAudioWave.h  SNAudioWaveGPU.cpp  SNAudioWaveGPU.h  SNAudioWavePll.cpp  SNAudioWavePll.h  SNAudioWaveSlide.cpp  SNAudioWaveSlide.h  SNAudioWaveStrip.cpp  SNAudioWaveStrip.h  SNAudioWaveStrip2.cpp  SNAudioWaveStrip2.h  SNCircleOrbit.cpp  SNCircleOrbit.h  SNCircleOrbit2.cpp  SNCircleOrbit2.h  SNCircleOrbitGPU.cpp  SNCircleOrbitGPU.h  SNParaColumns.cpp  SNParaColumns.h
tav_sn_complex/: .cproject  .project  CMakeLists.txt
tav_sn_complex/src/: SNAutumnLeaves.cpp  SNAutumnLeaves.h  SNAutumnLeavesVelTex.cpp  SNAutumnLeavesVelTex.h  SNKinectPainting.cpp  SNKinectPainting.h  SNKinectPainting2.cpp  SNKinectPainting2.h  SNRotatingObjMapping.cpp  SNRotatingObjMapping.h  SNRotatingObjMapping2.cpp  SNRotatingObjMapping2.h  SNSingleTextBlock.cpp  SNSingleTextBlock.h  SNTKinTouch.cpp  SNTKinTouch.h  SNTTexPartFluid.cpp  SNTTexPartFluid.h
tav_sn_testing/: .cproject  .project  CMakeLists.txt
tav_sn_testing/src/: SNImageFFT.cpp  SNImageFFT.h  SNSamsungColorBars.cpp  SNSamsungColorBars.h  SNSingleTextBlock.cpp  SNSingleTextBlock.h  SNTerrain.cpp  SNTerrain.h  SNTestAssimpLoader.cpp  SNTestAssimpLoader.h  SNTestAssimpNI.cpp  SNTestAssimpNI.h  SNTestAudio.cpp  SNTestAudio.h  SNTestCs5Tunnel.cpp  SNTestCs5Tunnel.h  SNTestEnvironmentMapping.cpp  SNTestEnvironmentMapping.h  SNTestExtrude.cpp  SNTestExtrude.h  SNTestFBO.cpp  SNTestFBO.h  SNTestFaceLola.cpp  SNTestFaceLola.h  SNTestFastBlur.cpp  SNTestFastBlur.h  SNTestGLSLFluid.cpp  SNTestGLSLFluid.h  SNTestGLSLFluid3D.cpp  SNTestGLSLFluid3D.h  SNTestGui.cpp  SNTestGui.h  SNTestHistogram.cpp  SNTestHistogram.h  SNTestObjImporter.cpp  SNTestObjImporter.h  SNTestOpticalFlow.cpp  SNTestOpticalFlow.h  SNTestPerlNoise3D.cpp  SNTestPerlNoise3D.h  (+28 more)
tav_sn_tracking/: .cproject  .project  CMakeLists.txt  CMakeLists.txt~
tav_sn_tracking/src/: SNFaceShift.cpp  SNFaceShift.h  SNFreenect2Motion.cpp  SNFreenect2Motion.h  SNKinect3DCam.cpp  SNKinect3DCam.h  SNKinectGeoRotate.cpp  SNKinectGeoRotate.h  SNKinectShadow.cpp  SNKinectShadow.h  SNMultKinectPointCloud.cpp  SNMultKinectPointCloud.h  SNTAudioFluid.cpp  SNTAudioFluid.h  SNTAudioFluidDepthFlow.cpp  SNTAudioFluidDepthFlow.h  SNTAudioFluidJoint.cpp  SNTAudioFluidJoint.h  SNTAugChessb.cpp  SNTAugChessb.h  SNTAugChessb2.cpp  SNTAugChessb2.h  SNTAugRoom.cpp  SNTAugRoom.h  SNTDepthMapAudioTrans.cpp  SNTDepthMapAudioTrans.h  SNTDepthMapSelfie.cpp  SNTDepthMapSelfie.h  SNTDrops.cpp  SNTDrops.h  SNTDropsDir.cpp  SNTDropsDir.h  SNTFluid.cpp  SNTFluid.h  SNTFluidDepth.cpp  SNTFluidDepth.h  SNTFluidDepthHeightMap.cpp  SNTFluidDepthHeightMap.h  SNTKinTouchRepro.cpp  SNTKinTouchRepro.h  (+28 more)
tav_sn_video/: .cproject  .project  CMakeLists.txt
tav_sn_video/Release/: makefile
tav_sn_video/src/: SNAudioRingV.cpp  SNAudioRingV.h  SNFFmpegVideo.cpp  SNFFmpegVideo.h  SNMuseoFrei.cpp  SNMuseoFrei.h  SNVideoTexture.cpp  SNVideoTexture.h  SNVideoTexture2.cpp  SNVideoTexture2.h  SNVideoTile0.cpp  SNVideoTile0.h  SNVideoTileAudio.cpp  SNVideoTileAudio.h  SNVideoTileAudio3d.cpp  SNVideoTileAudio3d.h
tav_tracking/: .cproject  .project  CMakeLists.txt
tav_tracking/src/: TrackObj.cpp  TrackObj.h  VideoActivityRange.cpp  VideoActivityRange.h
tav_video/: .cproject  .project  CMakeLists.txt
tav_video/src/: FFMpegDecode.cpp  FFMpegDecode.h  ImgSeqPlayer.cpp  ImgSeqPlayer.h  MediaRecorder.cpp  MediaRecorder.h  StopWatch.h  VideoTexture.cpp  VideoTexture.h  VideoTextureCapture.cpp  VideoTextureCapture.h  VideoTextureCv.cpp  VideoTextureCv.h  VideoTextureCvActRange.cpp  VideoTextureCvActRange.h  VideoTextureGStreamer.cpp  VideoTextureGStreamer.h  VideoTextureGst.cpp  VideoTextureGst.h  VideoTextureGstUtils.cpp  VideoTextureGstUtils.h  VideoTextureThread.cpp  VideoTextureThread.h
(+1607 files in other folders)
